--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    margin: 0;
+    margin: 2px;
     margin-top: 50px;
     font-family: sans-serif;
 }
@@ -33,7 +33,7 @@ section {
     display: flex;
     justify-content: center;
     align-items: center;
-    text-align: center;
+    text-align: right;
     
     background-size: cover; /* Add this line */
     background-position: center center; /* Add this line */
