--- a/style.css
+++ b/style.css
@@ -15,11 +15,23 @@ header {
     background-color: #eee;
 }
 
+header * {
+    display: inline;
+    height: 50px;
+}
+
+header ul {
+    padding: 0;
+}
+
+header li {
+    margin-left: 20px;
+}
 
 section {
     height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    text-align: right;
+    text-align: left;
 }
