finished first draft

--- a/style.css
+++ b/style.css
@@ -2,31 +2,6 @@ body {
     margin: 2px;
     margin-top: 50px;
     font-family: sans-serif;
-    color:cornflowerblue;
-}
-
-header {
-    display: flex;
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    height: 50px;
-    line-height: 50px;
-    background-color: #eee;
-}
-
-header * {
-    display: inline;
-    height: 50px;
-}
-
-header ul {
-    padding: 0;
-}
-
-header li {
-    margin-left: 20px;
 }
 
 section {
@@ -35,4 +10,20 @@ section {
     justify-content: center;
     align-items: center;
     text-align: left;
+}
+
+#Intro {
+    text-align: right;
+}
+
+#stupid {
+    padding: 20px;
+}
+
+a:link {
+    text-decoration: underline;
+}
+
+a:hover{
+    color: cornflowerblue;
 }
